@@ -1,6 +1,11 @@
 v3.5.7 (XXXX-XX-XX)
 -------------------
 
+* Fixed potential deadlock in cluster transactions if a transaction is returned
+  that was soft-aborted by transaction garbage collection before.
+  This deadlock should rarely ever occur in practice, as it can only be
+  triggered once during the server shutdown sequence.
+
 * Fixed BTS-233 issue: Fixed invalid IndexId comparator.
 
 * Fixed issue #12248: Web UI - Added missing HTML escaping in the setup script
